# WEB_module4

./: Dockerfile  main.py  message.html  pyproject.toml  readme.md
storage/: data.json
